--- a/public/css/pages/properties/location-search.css
+++ b/public/css/pages/properties/location-search.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 30px;
     padding: 0 36px 0 12px;
-    border: 1px solid #ddd;
+    border: 0 solid #ddd;
     border-radius: 6px;
     font-size: 14px;
     line-height: 28px;
