Стили страницы создания

--- a/public/css/pages/properties/create/page-create.css
+++ b/public/css/pages/properties/create/page-create.css
@@ -3,7 +3,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-Bold.woff") format("woff"), url("../../fonts/PTSans-Bold.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-Bold.woff") format("woff"), url("../../../../fonts/PTSans-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
@@ -11,7 +11,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-BoldItalic.woff") format("woff"), url("../../fonts/PTSans-BoldItalic.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-BoldItalic.woff") format("woff"), url("../../../../fonts/PTSans-BoldItalic.woff2") format("woff2");
   font-weight: 700;
   font-style: italic;
 }
@@ -19,7 +19,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-Italick.woff") format("woff"), url("../../fonts/PTSans-Italick.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-BoldItalic.woff2") format("woff"), url("../../../../fonts/PTSans-BoldItalic.woff2") format("woff2");
   font-weight: 400;
   font-style: italic;
 }
@@ -27,7 +27,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-Regular.woff") format("woff"), url("../../fonts/PTSans-Regular.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-Regular.woff") format("woff"), url("../../../../fonts/PTSans-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -1811,11 +1811,11 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
 }
 
 .my-dropdown-item-radio:checked + .my-dropdown-item-radio-text::before {
-  background-image: url("../../img/icon/radio-chek.svg");
+  background-image: url("../../../../img/icon/radio-chek.svg");
 }
 
 .my-dropdown-item-radio-text::before {
-  background-image: url("../../img/icon/radio.svg");
+  background-image: url("../../../../img/icon/radio.svg");
 }
 
 .my-dropdown-item-checkbox {
@@ -1823,11 +1823,11 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
 }
 
 .my-dropdown-item-checkbox:checked + .my-dropdown-item-checkbox-text::before {
-  background-image: url("../../img/icon/checkbox-chek.svg");
+  background-image: url("../../../../img/icon/checkbox-chek.svg");
 }
 
 .my-dropdown-item-checkbox-text::before {
-  background-image: url("../../img/icon/checkbox.svg");
+  background-image: url("../../../../img/icon/checkbox.svg");
 }
 
 .my-dropdown-item-radio-text,
