--- a/public/css/pages/properties/index/page-home.css
+++ b/public/css/pages/properties/index/page-home.css
@@ -3,7 +3,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-Bold.woff") format("woff"), url("../../fonts/PTSans-Bold.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-Bold.woff") format("woff"), url("../../../../fonts/PTSans-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
@@ -11,7 +11,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-BoldItalic.woff") format("woff"), url("../../fonts/PTSans-BoldItalic.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-BoldItalic.woff") format("woff"), url("../../../../fonts/PTSans-BoldItalic.woff2") format("woff2");
   font-weight: 700;
   font-style: italic;
 }
@@ -19,7 +19,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-Italick.woff") format("woff"), url("../../fonts/PTSans-Italick.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-Italick.woff") format("woff"), url("../../../../fonts/PTSans-Italick.woff2") format("woff2");
   font-weight: 400;
   font-style: italic;
 }
@@ -27,7 +27,7 @@
 @font-face {
   font-family: "PTSans";
   font-display: swap;
-  src: url("../../fonts/PTSans-Regular.woff") format("woff"), url("../../fonts/PTSans-Regular.woff2") format("woff2");
+  src: url("../../../../fonts/PTSans-Regular.woff") format("woff"), url("../../../../fonts/PTSans-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -95,7 +95,7 @@ ul {
   font-weight: 700;
   font-size: 14px;
   color: #111;
-  min-height: 30px;
+  min-height: 33px;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
@@ -3674,6 +3674,7 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   text-wrap: auto;
   text-align: left;
   padding: 2px 9px;
+  margin-bottom: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
