Вынес хедер и сайдбар в отдельные файлы плюс переименовал область на регион

--- a/public/css/pages/properties/create/page-create.css
+++ b/public/css/pages/properties/create/page-create.css
@@ -461,224 +461,8 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   color: #3585f5;
 }
 
-.sidebar {
-  max-width: 70px;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #04254E;
-}
+/* Sidebar styles are now centralized in public/css/layouts/crm/ */
 
-.sidebar-logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 100%;
-  padding: 23px 0;
-  -webkit-box-shadow: inset 0 0 0 2px #04254E;
-  box-shadow: inset 0 0 0 2px #04254E;
-}
-
-.sidebar-logo:hover {
-  background-color: #FFFFFF1A;
-  cursor: pointer;
-}
-
-.sidebar .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  height: 100vh;
-  overflow-Y: auto;
-  overflow-X: hidden;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  left: 0;
-}
-
-.sidebar .nav::-webkit-scrollbar {
-  width: 2px;
-  padding-right: 8px;
-}
-
-.sidebar .nav::-webkit-scrollbar-track {
-  background-color: #FFFFFF;
-  border-radius: 8px;
-}
-
-.sidebar .nav::-webkit-scrollbar-thumb {
-  border-radius: 6px;
-  background-color: #C2CDD8;
-}
-
-.sidebar .nav-list {
-  width: 100%;
-  margin-bottom: 0;
-}
-
-.sidebar .nav-list-item {
-  padding: 0;
-}
-
-.sidebar .nav-list-item:first-child .nav-list-link {
-  background-color: #fff;
-  padding-bottom: 23px;
-}
-
-.sidebar .nav-list-link {
-  text-decoration: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-bottom: 8px;
-}
-
-.sidebar .nav-list-link:hover {
-  background-color: #FFFFFF1A;
-  cursor: pointer;
-}
-
-.sidebar .nav-list-link.active {
-  background-color: #FFFFFF1A;
-  cursor: auto;
-}
-
-.sidebar .nav-list-link.active .nav-list-text {
-  color: #fff;
-}
-
-.sidebar .nav-list-text {
-  font-family: 'PTSans', sans-serif;
-  font-weight: 700;
-  font-size: 10px;
-  line-height: normal;
-  color: #FFFFFF;
-}
-
-.sidebar .nav-list-icon {
-  padding: 6px;
-  border-radius: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: transparent;
-  position: relative;
-}
-
-.sidebar .nav-list-icon .my-badge {
-  position: absolute;
-  top: 0;
-  right: -5px;
-  background-color: #3585F5;
-  font-weight: 700;
-  font-size: 12px;
-  height: 24px;
-  min-width: 24px;
-  text-align: center;
-  padding: 4px 5px;
-  border-radius: 50px;
-  color: #fff;
-}
-
-.sidebar .nav-info {
-  width: 100%;
-  margin-bottom: 0;
-}
-
-.sidebar .nav-info-item {
-  padding: 0;
-}
-
-.sidebar .nav-info-item:last-of-type img {
-  width: 40px;
-  height: 40px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
-.sidebar .nav-info-item .dropdown .dropdown-toggle {
-  width: 100%;
-  border-radius: 0;
-  --bs-btn-color: #FFFFFF;
-  --bs-btn-hover-color: #FFFFFF;
-  --bs-btn-hover-bg: #fffFFF1A;
-  --bs-btn-hover-border-color: transparent;
-  --bs-btn-active-color: #FFFFFF;
-  --bs-btn-active-bg: transparent;
-  --bs-btn-active-border-color: transparent;
-}
-
-.sidebar .nav-info-item .dropdown .dropdown-toggle.show::after {
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-
-.sidebar .nav-info-item .dropdown-menu.show {
-  min-width: 100%;
-}
-
-.sidebar .nav-info-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding: 6px;
-}
-
-.sidebar .nav-info-link:hover {
-  background-color: #FFFFFF1A;
-  cursor: pointer;
-}
-
-.sidebar .nav-info-link .my-badge {
-  position: absolute;
-  top: 8px;
-  left: 75%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  padding: 4px;
-  background-color: #F97474;
-  border-radius: 50px;
-  font-size: 10px;
-  font-weight: 700;
-  color: #fff;
-}
 
 .item {
   display: -webkit-box;
