Робота над комплексом

--- a/public/css/pages/complexes/index/page-complex.css
+++ b/public/css/pages/complexes/index/page-complex.css
@@ -674,7 +674,7 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
 
 #example tbody tr td .tbody-wrapper>p {
   margin: 0;
-  text-wrap: nowrap;
+  /*text-wrap: nowrap;*/
 }
 
 #example tbody tr td .tbody-wrapper>span {
